# _DOS_CRACKME_

./: .gitignore  CRACK.ASM  README.md  TEST.TXT  data.asm
asmSrc/: crack.asm  data.asm
gtk/: CMakeLists.txt  main.cpp
gtk/include/: application.h  objectParameters.h  objects.h  patcher.h  style.css
gtk/src/: application.cpp  patcher.cpp
tests/: replaceCode.txt  testPassword.txt  xorChecker.txt
